DesiNZC/objects/Scope3CrbnFtprnt.object
<CustomObject>
    <fields>
        <fullName>Business_Metric__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Metric</label>
        <referenceTo>Company_Metrics__c</referenceTo>
        <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
        <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Business_Units</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case linked to Portfolio Company</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Portfolio_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
        <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_of_Emissions__c</fullName>
        <formula>Business_Metric__r.Internal_Cost_of_Carbon__c *  TotScope3EmissionsInTco2e</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Emissions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity linked to Portfolio Company</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Portfolio_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
        <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Scope 3 Carbon Footprints</relationshipLabel>
        <relationshipName>Scope_3_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>